--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
-            <small style="font-size: 1em;">&copy; 2019 Horiseon Social Solution Services, Inc.</small>
+            <small>&copy; 2019 Horiseon Social Solution Services, Inc.</small>
         </p>
     </footer>
 </body>
